--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "cooksasy",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://github.com/AsligulSafarova/RediSchool.git",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -18,10 +19,11 @@
   "scripts": {
     "start": "react-scripts start",
     "server": "json-server --watch  ./Data/data.json  --port 5000",
-
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -40,5 +42,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.2.0"
   }
 }
