--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "cooksasy",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://github.com/AsligulSafarova/RediSchool.git",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -17,8 +16,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "server": "json-server --watch  ./Data/data.json  --port 5000",
+ "start": "HOST=localhost react-scripts start",
+    "server": "json-server --watch ./Data/data.json --port 5000",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
